--- a/cmp-databinding/src/app/cockpit/cockpit.component.html
+++ b/cmp-databinding/src/app/cockpit/cockpit.component.html
@@ -2,15 +2,17 @@
     <div class="col-xs-12">
       <p>Add new Servers or blueprints!</p>
       <label>Server Name</label>
-      <input type="text" class="form-control" [(ngModel)]="newServerName">
+      <!-- <input type="text" class="form-control" [(ngModel)]="newServerName"> -->
+      <!-- using local reference -->
+      <input type="text" class="form-control" #newServerName>
       <label>Server Content</label>
-      <input type="text" class="form-control" [(ngModel)]="newServerContent">
+      <input type="text" class="form-control" #newServerContent>
       <br>
       <button
         class="btn btn-primary me-1"
-        (click)="onAddServer()">Add Server</button>
+        (click)="onAddServer(newServerName)">Add Server</button>
       <button
         class="btn btn-primary me-1"
-        (click)="onAddBlueprint()">Add Server Blueprint</button>
+        (click)="onAddBlueprint(newServerName)">Add Server Blueprint</button>
     </div>
   </div>
