--- a/my-recipe-app/src/app/app.component.html
+++ b/my-recipe-app/src/app/app.component.html
@@ -1,9 +1,9 @@
-<div class="container-fluid bg-dark">
-  <app-header></app-header>
+<div class="container-fluid">
+  <app-header (navigationClicked)="onNavigationClicked($event)"></app-header>
   <div class="row">
     <div class="col-12">
-      <app-recipes></app-recipes>
-      <app-shopping-list></app-shopping-list>
+      <app-recipes *ngIf="currentPage === 'recipes'"></app-recipes>
+      <app-shopping-list *ngIf="currentPage === 'shopping-list'"></app-shopping-list>
     </div>
   </div>
 </div>
