--- a/my-recipe-app/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/my-recipe-app/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,1 +1,14 @@
-<p>recipe-item works!</p>
+<a href="#" class="list-group-item list-group-item-action clearfix bg-light" (click)="recipeSelected()">
+    <div class="float-start ">
+        <div class="d-flex w-100 justify-content-between ">
+            <h5 class="mb-1">{{recipe.name}}</h5>
+        </div>
+        <p class="mb-1">{{recipe.description}}</p>
+        <!-- <small>And some small print.</small> -->
+    </div>
+    <div class="float-end">
+        <img [src]="recipe.imagePath"
+            alt="potato croquettes" class="img-thumbnail img-fluid" style="max-height: 50px;">
+    </div>
+    
+</a>
