--- a/my-recipe-app/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/my-recipe-app/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,18 +1,18 @@
 <div class="row p-1">
     <div class="col-12 ">
-        <img src="{{recipe.imagePath}}"
-                    alt={{recipe.name}} class="img-fluid rounded">
+        <img src="{{recipe&&recipe.imagePath}}"
+                    alt={{recipe&&recipe.name}} class="img-fluid rounded">
     </div>
 </div>
 <div class="row p-1">
     <div class="col-12 ">
-        <h1>{{recipe.name}}</h1>
+        <h1 >{{recipe&&recipe.name}}</h1>
     </div>
 </div>
 <div class="row p-1">
     <div class="col-12 ">
         <div class="btn-group" role="group">
-            <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+            <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle text-white" data-bs-toggle="dropdown" aria-expanded="false">
               Manage Recipe
             </button>
             <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">
@@ -25,7 +25,7 @@
 </div>
 <div class="row p-1">
     <div class="col-12 ">
-        {{recipe.description}}
+        {{recipe&&recipe.description}}
     </div>
 </div>
 <div class="row p-1">
