--- a/my-recipe-app/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/my-recipe-app/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -13,7 +13,7 @@
             </div>
             <div class="row pt-1 d-flex justify-content-between">
                 <div class="col d-flex justify-content-center">
-                    <button class="btn btn-success ">
+                    <button class="btn btn-success  text-white">
                         Add
                     </button>
                 </div>
@@ -23,7 +23,7 @@
                     </button>
                 </div>
                 <div class="col d-flex justify-content-center">
-                    <button class="btn btn-warning">
+                    <button class="btn btn-warning text-white">
                         Clear
                     </button>
                 </div>
