my-recipe-app, more styling

--- a/my-recipe-app/src/app/header/header.component.html
+++ b/my-recipe-app/src/app/header/header.component.html
@@ -17,9 +17,9 @@
 					aria-expanded="false">
 					Manage
 				</a>
-				<ul class="dropdown-menu dropdown-menu-lg-end" aria-labelledby="navbarDropdown">
-					<li><a class="dropdown-item" href="#">Save Data</a></li>
-					<li><a class="dropdown-item" href="#">Fetch Data</a></li>
+				<ul class="dropdown-menu dropdown-menu-lg-end bg-light" aria-labelledby="navbarDropdown">
+					<li><a class="dropdown-item text-dark" href="#">Save Data</a></li>
+					<li><a class="dropdown-item text-dark" href="#">Fetch Data</a></li>
 				</ul>
 			</li>
 		</ul>
