--- a/my-recipe-app/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/my-recipe-app/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,6 +1,6 @@
 <div class="row p-1">
     <div class="col-12">
-        <button class="btn btn-primary text-white">
+        <button class="btn btn-primary text-light">
             New Recipe
         </button>
     </div>
