--- a/my-recipe-app/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/my-recipe-app/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -13,17 +13,17 @@
             </div>
             <div class="row pt-1 d-flex justify-content-between">
                 <div class="col d-flex justify-content-center">
-                    <button class="btn btn-success  text-white">
+                    <button class="btn btn-success  text-light">
                         Add
                     </button>
                 </div>
                 <div class="col d-flex justify-content-center">
-                    <button class="btn btn-danger">
+                    <button class="btn btn-danger text-light">
                         Delete
                     </button>
                 </div>
                 <div class="col d-flex justify-content-center">
-                    <button class="btn btn-warning text-white">
+                    <button class="btn btn-warning text-light">
                         Clear
                     </button>
                 </div>
