injectable services, an understanding

--- a/services/src/app/new-account/new-account.component.html
+++ b/services/src/app/new-account/new-account.component.html
@@ -15,7 +15,7 @@
       </select>
     </div>
     <button
-      class="btn btn-primary"
+      class="btn btn-primary m-1"
       (click)="onCreateAccount(accountName.value, status.value)">
       Add Account
     </button>
