--- a/my-recipe-app/src/app/components/recipes/recipe-list/recipe-list.component.html
+++ b/my-recipe-app/src/app/components/recipes/recipe-list/recipe-list.component.html
@@ -7,6 +7,6 @@
 </div>
 <div class="row">
     <div class="col-xs-12">
-        <app-recipe-item *ngFor=" let recipe of recipes" [recipe-item] = "recipe" (onRecipeSelected)="recipeSelected(recipe)"></app-recipe-item>
+        <app-recipe-item *ngFor=" let recipe of recipes" [recipe-item] = "recipe"></app-recipe-item>
     </div>
 </div>
