--- a/my-recipe-app/src/app/components/recipes/recipes.component.html
+++ b/my-recipe-app/src/app/components/recipes/recipes.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-5">
-        <app-recipe-list (onRecipeSelected)="onRecipeSelected($event)"></app-recipe-list>
+        <app-recipe-list></app-recipe-list>
     </div>
     <div class="col-7">
         <app-recipe-detail [recipe-item]="selectedRecipe" *ngIf="selectedRecipe; else noRecipeSelected"></app-recipe-detail>
