--- a/my-recipe-app/src/app/components/shopping-list/shopping-list.component.html
+++ b/my-recipe-app/src/app/components/shopping-list/shopping-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-5">
-        <app-shopping-edit (ingredientAdded)="onIngredientAdded($event)"></app-shopping-edit>
+        <app-shopping-edit></app-shopping-edit>
         <hr>
         <ul class="list-group ">
             <li class="list-group-item d-flex justify-content-between align-items-start bg-light"
