my-recipe-service, add ingredients from recipt to shopping list feature

--- a/my-recipe-app/src/app/components/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/my-recipe-app/src/app/components/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,9 +1,9 @@
 <a href="#" class="list-group-item list-group-item-action clearfix bg-light" (click)="recipeSelected()">
-    <div class="float-start ">
+    <div class="float-start col-10 text-truncate d-inline-block">
         <div class="d-flex w-100 justify-content-between ">
             <h5 class="mb-1">{{recipe.name}}</h5>
         </div>
-        <p class="mb-1">{{recipe.description}}</p>
+        <p class="mb-1 ">{{recipe.description}}</p>
         <!-- <small>And some small print.</small> -->
     </div>
     <div class="float-end">
