--- a/my-recipe-app/src/app/components/recipes/recipe-detail/recipe-detail.component.html
+++ b/my-recipe-app/src/app/components/recipes/recipe-detail/recipe-detail.component.html
@@ -16,7 +16,7 @@
               Manage Recipe
             </button>
             <ul class="dropdown-menu bg-light" aria-labelledby="btnGroupDrop1">
-              <li><a class="dropdown-item text-dark" href="#">To Shopping List</a></li>
+              <li><a class="dropdown-item text-dark" (click)="onAddToShoppingList()" style="cursor: pointer;">To Shopping List</a></li>
               <li><a class="dropdown-item text-dark" href="#">Edit Recipe</a></li>
               <li><a class="dropdown-item text-dark" href="#">Delete Recipe</a></li>
             </ul>
@@ -29,7 +29,16 @@
     </div>
 </div>
 <div class="row p-1">
+    <h3>Ingredients</h3>
     <div class="col-12 ">
-        Ingredients
+        <ul class="list-group ">
+            <li class="list-group-item d-flex justify-content-between align-items-start bg-light"
+                *ngFor="let ingredient of recipe.ingredients">
+                <div class="ms-2 me-auto">
+                    {{ingredient.name}}
+                </div>
+                <span class="badge bg-primary rounded-pill">{{ingredient.amount}}</span>
+            </li>
+        </ul>
     </div>
 </div>
