--- a/my-recipe-app/src/app/components/recipes/recipe-list/recipe-list.component.html
+++ b/my-recipe-app/src/app/components/recipes/recipe-list/recipe-list.component.html
@@ -6,7 +6,7 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-xs-12">
+    <div class="col-12">
         <app-recipe-item *ngFor=" let recipe of recipes" [recipe-item] = "recipe"></app-recipe-item>
     </div>
 </div>
