--- a/routing/src/app/servers/servers.component.html
+++ b/routing/src/app/servers/servers.component.html
@@ -2,14 +2,15 @@
   <div class="col-xs-12 col-sm-4">
     <div class="list-group">
       <a
-        href="#"
         class="list-group-item"
-        *ngFor="let server of servers">
+        *ngFor="let server of servers"
+        style="cursor: pointer;">
         {{ server.name }}
       </a>
     </div>
   </div>
   <div class="col-xs-12 col-sm-4">
+    <button class="btn btn-primary m-1" (click)="reload()">Reload Page</button>
     <app-edit-server></app-edit-server>
     <hr>
     <app-server></app-server>
