--- a/routing/src/app/servers/servers.component.html
+++ b/routing/src/app/servers/servers.component.html
@@ -4,7 +4,10 @@
       <a
         class="list-group-item"
         *ngFor="let server of servers"
-        style="cursor: pointer;">
+        style="cursor: pointer;"
+        [routerLink]="['/servers', '2', 'edit']"
+        [queryParams] = "{'allowEdit': 'true'}"
+        fragment="loading">
         {{ server.name }}
       </a>
     </div>
