--- a/routing/src/app/servers/servers.component.html
+++ b/routing/src/app/servers/servers.component.html
@@ -14,10 +14,12 @@
     </div>
   </div>
   <div class="col-xs-12 col-sm-4">
-    <button class="btn btn-primary m-1" (click)="reload()">Reload Page</button>
+    <!-- <button class="btn btn-primary m-1" (click)="reload()">Reload Page</button> -->
+    
     <!-- <app-edit-server></app-edit-server> -->
-    <hr>
+    <!-- <hr> -->
     <!-- <app-server></app-server> -->
+    <router-outlet></router-outlet>
   </div>
 </div>
 
