--- a/routing/src/app/servers/server/server.component.html
+++ b/routing/src/app/servers/server/server.component.html
@@ -1,5 +1,5 @@
 <h5>{{ server.name }}</h5>
 <p>Server status is {{ server.status }}</p>
-<button class="btn btn-primary m-1" [routerLink]="['/servers', server.id, 'edit']" queryParamsHandling="preserve" preserveFragment="true">
+<button class="btn btn-primary m-1" [routerLink]="['/servers', server.id, 'edit']" queryParamsHandling="preserve" preserveFragment="true" skipLocationChange>
     Edit Server
 </button>
