--- a/routing/src/app/servers/servers.component.html
+++ b/routing/src/app/servers/servers.component.html
@@ -8,7 +8,8 @@
         [routerLink]="['/servers', server.id]"
         [routerLinkActiveOptions]="{exact: true}"
         [queryParams] = "{'allowEdit': server.id===3?'true':'false'}"
-        fragment="loading">
+        fragment="loading"
+        skipLocationChange>
         {{ server.name }}
       </a>
     </div>
