--- a/routing/src/app/home/home.component.html
+++ b/routing/src/app/home/home.component.html
@@ -1,3 +1,9 @@
+<button class="btn btn-primary m-1" (click)="login()">
+    Login
+</button>
+<button class="btn btn-primary m-1" (click)="logout()">
+    Logout
+</button>
 <h4>Welcome to Server Manager 4.0</h4>
 <p>Manage your Servers and Users.</p>
 <button class="btn btn-primary" (click)="gotoServer(1)">Load Server 1</button>
