--- a/my-recipe-app/src/app/components/header/header.component.html
+++ b/my-recipe-app/src/app/components/header/header.component.html
@@ -1,29 +1,63 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top p-1">
-	<a class="navbar-brand" href="#">My Recipes!</a>
-	<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-		aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
-	</button>
-	<div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-		<ul class="navbar-nav">
-			<li class="nav-item">
-				<a href="#" class="nav-link" [ngClass]= "{'active': currentPage==='recipes'}"  (click)="onNavigate('recipes')">Recipes</a>
-			</li>
-			<li class="nav-item">
-				<a href="#" class="nav-link" [ngClass]= "{'active': currentPage==='shopping-list'}" (click)="onNavigate('shopping-list')" >Shopping List</a>
-			</li>
-			<li class="nav-item dropdown">
-				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-					aria-expanded="false">
-					Manage
-				</a>
-				<ul class="dropdown-menu dropdown-menu-lg-end bg-light" aria-labelledby="navbarDropdown">
-					<li><a class="dropdown-item text-dark" href="#">Save Data</a></li>
-					<li><a class="dropdown-item text-dark" href="#">Fetch Data</a></li>
-				</ul>
-			</li>
-		</ul>
-		
-
-	</div>
+  <a class="navbar-brand">My Recipes!</a>
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-bs-toggle="collapse"
+    data-bs-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div
+    class="collapse navbar-collapse justify-content-end"
+    id="navbarSupportedContent"
+  >
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a
+          class="nav-link"
+          [routerLink]="['/recipes']"
+          [routerLinkActive]="['active']"
+          >Recipes</a
+        >
+      </li>
+      <li class="nav-item">
+        <a
+          class="nav-link"
+          [routerLink]="['/shopping-list']"
+          [routerLinkActive]="['active']"
+          >Shopping List</a
+        >
+      </li>
+      <li class="nav-item dropdown">
+        <a
+          class="nav-link dropdown-toggle"
+          id="navbarDropdown"
+          role="button"
+          data-bs-toggle="dropdown"
+          aria-expanded="false"
+        >
+          Manage
+        </a>
+        <ul
+          class="dropdown-menu dropdown-menu-lg-end bg-light"
+          aria-labelledby="navbarDropdown"
+        >
+          <li>
+            <a class="dropdown-item text-dark" style="cursor: pointer"
+              >Save Data</a
+            >
+          </li>
+          <li>
+            <a class="dropdown-item text-dark" style="cursor: pointer"
+              >Fetch Data</a
+            >
+          </li>
+        </ul>
+      </li>
+    </ul>
+  </div>
 </nav>
