--- a/my-recipe-app/src/app/components/recipes/recipe-list/recipe-list.component.html
+++ b/my-recipe-app/src/app/components/recipes/recipe-list/recipe-list.component.html
@@ -1,12 +1,14 @@
 <div class="row p-1">
-    <div class="col-12">
-        <button class="btn btn-primary text-light">
-            New Recipe
-        </button>
-    </div>
+  <div class="col-12">
+    <button class="btn btn-primary text-light">New Recipe</button>
+  </div>
 </div>
 <div class="row">
-    <div class="col-12">
-        <app-recipe-item *ngFor=" let recipe of recipes" [recipe-item] = "recipe"></app-recipe-item>
-    </div>
+  <div class="col-12">
+    <app-recipe-item
+      *ngFor="let recipe of recipes; let i = index"
+      [recipe-item]="recipe"
+      [recipe-item-index]="i"
+    ></app-recipe-item>
+  </div>
 </div>
