--- a/my-recipe-app/src/app/components/recipes/recipes.component.html
+++ b/my-recipe-app/src/app/components/recipes/recipes.component.html
@@ -1,13 +1,8 @@
 <div class="row">
-    <div class="col-5">
-        <app-recipe-list></app-recipe-list>
-    </div>
-    <div class="col-7">
-        <app-recipe-detail [recipe-item]="selectedRecipe" *ngIf="selectedRecipe; else noRecipeSelected"></app-recipe-detail>
-        <ng-template #noRecipeSelected>
-            <p>
-                Please select a recipe to view its details!
-            </p>
-        </ng-template>
-    </div>
+  <div class="col-5">
+    <app-recipe-list></app-recipe-list>
+  </div>
+  <div class="col-7">
+    <router-outlet></router-outlet>
+  </div>
 </div>
