my-recipe-app, add edit recipe option and add more routes

--- a/my-recipe-app/src/app/components/recipes/recipe-list/recipe-list.component.html
+++ b/my-recipe-app/src/app/components/recipes/recipe-list/recipe-list.component.html
@@ -1,6 +1,11 @@
 <div class="row p-1">
   <div class="col-12">
-    <button class="btn btn-primary text-light">New Recipe</button>
+    <button
+      class="btn btn-primary text-light"
+      [routerLink]="['/recipes', 'new']"
+    >
+      New Recipe
+    </button>
   </div>
 </div>
 <div class="row">
