--- a/my-recipe-app/src/app/components/header/header.component.html
+++ b/my-recipe-app/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top p-1">
-  <a class="navbar-brand">My Recipes!</a>
+  <a class="navbar-brand" [routerLink]="['/recipes']">My Recipes!</a>
   <button
     class="navbar-toggler"
     type="button"
