--- a/my-recipe-app/src/app/components/recipes/recipe-detail/recipe-detail.component.html
+++ b/my-recipe-app/src/app/components/recipes/recipe-detail/recipe-detail.component.html
@@ -1,44 +1,68 @@
 <div class="row p-1">
-    <div class="col-12 ">
-        <img [src]="recipe.imagePath" 
-                    [alt]="recipe.name" class="img-fluid rounded">
-    </div>
+  <div class="col-12">
+    <img
+      [src]="recipe.imagePath"
+      [alt]="recipe.name"
+      class="img-fluid rounded"
+    />
+  </div>
 </div>
 <div class="row p-1">
-    <div class="col-12 ">
-        <h1 >{{recipe.name}}</h1>
-    </div>
+  <div class="col-12">
+    <h1>{{ recipe.name }}</h1>
+  </div>
 </div>
 <div class="row p-1">
-    <div class="col-12 ">
-        <div class="btn-group" role="group">
-            <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle text-light" data-bs-toggle="dropdown" aria-expanded="false">
-              Manage Recipe
-            </button>
-            <ul class="dropdown-menu bg-light" aria-labelledby="btnGroupDrop1">
-              <li><a class="dropdown-item text-dark" (click)="onAddToShoppingList()" style="cursor: pointer;">To Shopping List</a></li>
-              <li><a class="dropdown-item text-dark" href="#">Edit Recipe</a></li>
-              <li><a class="dropdown-item text-dark" href="#">Delete Recipe</a></li>
-            </ul>
-          </div>
+  <div class="col-12">
+    <div class="btn-group" role="group">
+      <button
+        id="btnGroupDrop1"
+        type="button"
+        class="btn btn-primary dropdown-toggle text-light"
+        data-bs-toggle="dropdown"
+        aria-expanded="false"
+      >
+        Manage Recipe
+      </button>
+      <ul class="dropdown-menu bg-light" aria-labelledby="btnGroupDrop1">
+        <li>
+          <a
+            class="dropdown-item text-dark"
+            (click)="onAddToShoppingList()"
+            style="cursor: pointer"
+            >To Shopping List</a
+          >
+        </li>
+        <li>
+          <a class="dropdown-item text-dark" [routerLink]="['edit']"
+            >Edit Recipe</a
+          >
+        </li>
+        <li><a class="dropdown-item text-dark" href="#">Delete Recipe</a></li>
+      </ul>
     </div>
+  </div>
 </div>
 <div class="row p-1">
-    <div class="col-12 ">
-        {{recipe.description}}
-    </div>
+  <div class="col-12">
+    {{ recipe.description }}
+  </div>
 </div>
 <div class="row p-1">
-    <h3>Ingredients</h3>
-    <div class="col-12 ">
-        <ul class="list-group ">
-            <li class="list-group-item d-flex justify-content-between align-items-start bg-light"
-                *ngFor="let ingredient of recipe.ingredients">
-                <div class="ms-2 me-auto">
-                    {{ingredient.name}}
-                </div>
-                <span class="badge bg-primary rounded-pill">{{ingredient.amount}}</span>
-            </li>
-        </ul>
-    </div>
+  <h3>Ingredients</h3>
+  <div class="col-12">
+    <ul class="list-group">
+      <li
+        class="list-group-item d-flex justify-content-between align-items-start bg-light"
+        *ngFor="let ingredient of recipe.ingredients"
+      >
+        <div class="ms-2 me-auto">
+          {{ ingredient.name }}
+        </div>
+        <span class="badge bg-primary rounded-pill">{{
+          ingredient.amount
+        }}</span>
+      </li>
+    </ul>
+  </div>
 </div>
