my-recipe-app, playing with smoothscrolling, click on recipe smoothscrols to the ingredients

--- a/my-recipe-app/src/app/components/recipes/recipe-detail/recipe-detail.component.html
+++ b/my-recipe-app/src/app/components/recipes/recipe-detail/recipe-detail.component.html
@@ -48,7 +48,7 @@
     {{ recipe.description }}
   </div>
 </div>
-<div class="row p-1">
+<div class="row p-1" id="ingredients-fragment">
   <h3>Ingredients</h3>
   <div class="col-12">
     <ul class="list-group">
