--- a/my-recipe-app/src/app/components/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/my-recipe-app/src/app/components/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -2,6 +2,7 @@
   class="list-group-item list-group-item-action clearfix text-dark"
   [routerLink]="[idx]"
   routerLinkActive="active"
+  fragment="ingredients-fragment"
   style="cursor: pointer"
 >
   <div
