--- a/forms-td/src/app/app.component.html
+++ b/forms-td/src/app/app.component.html
@@ -1,9 +1,29 @@
 <div class="container">
-  <form class="row g-3 col-6">
+  <form
+    class="row g-3 col-6"
+    (ngSubmit)="onSubmit(userform)"
+    #userform="ngForm"
+  >
     <div id="user-data" class="row g-3">
       <div class="col-12">
         <label for="username" class="form-label">Username</label>
-        <input type="text" id="username" class="form-control" />
+        <input
+          type="text"
+          id="username"
+          class="form-control"
+          ngModel
+          name="username"
+          required
+          #username="ngModel"
+          aria-describedby="userNameHelp"
+        />
+        <div
+          id="userNameHelp"
+          class="form-text text-danger"
+          *ngIf="username.invalid && username.touched"
+        >
+          User Name is required.
+        </div>
       </div>
       <div class="col-12">
         <button class="btn btn-secondary" type="button">
@@ -12,18 +32,36 @@
       </div>
       <div class="col-12">
         <label for="email" class="form-label">Mail</label>
-        <input type="email" id="email" class="form-control" />
+        <input
+          type="email"
+          id="email"
+          class="form-control"
+          ngModel
+          name="email"
+          email
+        />
       </div>
     </div>
     <div class="col-12">
       <label for="secret" class="form-label">Secret Questions</label>
-      <select id="secret" class="form-control">
+      <select
+        id="secret"
+        class="form-control"
+        [ngModel]="defaultQuestion"
+        name="secret"
+      >
         <option value="pet">Your first Pet?</option>
         <option value="teacher">Your first teacher?</option>
       </select>
     </div>
     <div class="col-12">
-      <button class="btn btn-primary" type="submit">Submit</button>
+      <button
+        class="btn btn-primary"
+        type="submit"
+        [disabled]="userform.invalid"
+      >
+        Submit
+      </button>
     </div>
   </form>
 </div>
