--- a/my-recipe-app/src/app/components/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/my-recipe-app/src/app/components/shopping-list/shopping-edit/shopping-edit.component.html
@@ -10,6 +10,7 @@
             id="ingredientName"
             name="ingredientName"
             ngModel
+            required
           />
         </div>
         <div class="col-2">
@@ -20,12 +21,20 @@
             id="ingredientAmount"
             name="ingredientAmount"
             ngModel
+            required
+            min="0"
           />
         </div>
       </div>
       <div class="row pt-1 d-flex justify-content-between">
         <div class="col d-flex justify-content-center">
-          <button class="btn btn-success text-light" type="submit">Add</button>
+          <button
+            class="btn btn-success text-light"
+            type="submit"
+            [disabled]="shoppingEditForm.invalid"
+          >
+            Add
+          </button>
         </div>
         <div class="col d-flex justify-content-center">
           <button class="btn btn-danger text-light" type="button">
