my-recipe-app, select and edit item

--- a/my-recipe-app/src/app/components/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/my-recipe-app/src/app/components/shopping-list/shopping-edit/shopping-edit.component.html
@@ -33,7 +33,7 @@
             type="submit"
             [disabled]="shoppingEditForm.invalid"
           >
-            Add
+            {{ newIngredient ? "Add" : "Save" }}
           </button>
         </div>
         <div class="col d-flex justify-content-center">
