--- a/my-recipe-app/src/app/components/shopping-list/shopping-list.component.html
+++ b/my-recipe-app/src/app/components/shopping-list/shopping-list.component.html
@@ -1,15 +1,21 @@
 <div class="row">
-    <div class="col-5">
-        <app-shopping-edit></app-shopping-edit>
-        <hr>
-        <ul class="list-group ">
-            <li class="list-group-item d-flex justify-content-between align-items-start bg-light"
-                *ngFor="let ingredient of ingredients">
-                <div class="ms-2 me-auto">
-                    {{ingredient.name}}
-                </div>
-                <span class="badge bg-primary rounded-pill">{{ingredient.amount}}</span>
-            </li>
-        </ul>
-    </div>
+  <div class="col-5">
+    <app-shopping-edit></app-shopping-edit>
+    <hr />
+    <ul class="list-group">
+      <li
+        class="list-group-item d-flex justify-content-between align-items-start bg-light"
+        *ngFor="let ingredient of ingredients; let i = index"
+      >
+        <a style="cursor: pointer" (click)="selectItem(i)"
+          ><div class="ms-2 me-auto">
+            {{ ingredient.name }}
+          </div>
+        </a>
+        <span class="badge bg-primary rounded-pill">{{
+          ingredient.amount
+        }}</span>
+      </li>
+    </ul>
+  </div>
 </div>
