my-recipe-app, add delete and clear functionality

--- a/my-recipe-app/src/app/components/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/my-recipe-app/src/app/components/shopping-list/shopping-edit/shopping-edit.component.html
@@ -37,12 +37,21 @@
           </button>
         </div>
         <div class="col d-flex justify-content-center">
-          <button class="btn btn-danger text-light" type="button">
+          <button
+            class="btn btn-danger text-light"
+            type="button"
+            *ngIf="!newIngredient"
+            (click)="deleteIngredient()"
+          >
             Delete
           </button>
         </div>
         <div class="col d-flex justify-content-center">
-          <button class="btn btn-warning text-light" type="button">
+          <button
+            class="btn btn-warning text-light"
+            type="button"
+            (click)="clearForm()"
+          >
             Clear
           </button>
         </div>
