--- a/my-recipe-app/src/app/components/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/my-recipe-app/src/app/components/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -18,7 +18,7 @@
   <div class="float-end">
     <img
       [src]="recipe.imagePath"
-      alt="potato croquettes"
+      [alt]="recipe.name"
       class="img-thumbnail img-fluid"
       style="max-height: 50px"
     />
