my-recipe-app nearly complete with edit and delete

--- a/my-recipe-app/src/app/components/recipes/recipe-detail/recipe-detail.component.html
+++ b/my-recipe-app/src/app/components/recipes/recipe-detail/recipe-detail.component.html
@@ -38,7 +38,11 @@
             >Edit Recipe</a
           >
         </li>
-        <li><a class="dropdown-item text-dark" href="#">Delete Recipe</a></li>
+        <li>
+          <a class="dropdown-item text-dark" (click)="deleteRecipe()"
+            >Delete Recipe</a
+          >
+        </li>
       </ul>
     </div>
   </div>
