--- a/pipes/src/app/app.component.html
+++ b/pipes/src/app/app.component.html
@@ -10,7 +10,7 @@
           <div class="col">
             <strong>{{ server.name }}</strong> |
             {{ server.instanceType | uppercase }} |
-            {{ server.started | date }}
+            {{ server.started | date: "fullDate" | uppercase }}
           </div>
           <div class="col-1">
             <span class="badge rounded-pill bg-secondary">
