--- a/pipes/src/app/app.component.html
+++ b/pipes/src/app/app.component.html
@@ -8,8 +8,10 @@
       >
         <div class="row">
           <div class="col">
-            <strong>{{ server.name }}</strong> |
-            {{ server.instanceType | uppercase }} |
+            <strong data-bs-toggle="tooltip" [title]="server.name">{{
+              server.name | shorten
+            }}</strong>
+            | {{ server.instanceType | uppercase }} |
             {{ server.started | date: "fullDate" | uppercase }}
           </div>
           <div class="col-1">
