--- a/http-01/src/app/app.component.html
+++ b/http-01/src/app/app.component.html
@@ -51,8 +51,11 @@
   </div>
   <div class="row">
     <div class="col">
-      <p *ngIf="loadedPosts.length < 1">No posts available!</p>
-      <ul class="list-group" *ngIf="loadedPosts.length > 0">
+      <div class="spinner-border text-primary" role="status" *ngIf="isFetching">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+      <p *ngIf="loadedPosts.length < 1 && !isFetching">No posts available!</p>
+      <ul class="list-group" *ngIf="loadedPosts.length > 0 && !isFetching">
         <li class="list-group-item" *ngFor="let post of loadedPosts">
           <div class="card">
             <div class="card-header">
