my-recipe-app, add http client and put data to firebase db

--- a/my-recipe-app/src/app/components/header/header.component.html
+++ b/my-recipe-app/src/app/components/header/header.component.html
@@ -47,7 +47,10 @@
           aria-labelledby="navbarDropdown"
         >
           <li>
-            <a class="dropdown-item text-dark" style="cursor: pointer"
+            <a
+              class="dropdown-item text-dark"
+              style="cursor: pointer"
+              (click)="saveData()"
               >Save Data</a
             >
           </li>
