my-recipe-app, get data from firebase using http get

--- a/my-recipe-app/src/app/components/header/header.component.html
+++ b/my-recipe-app/src/app/components/header/header.component.html
@@ -55,7 +55,10 @@
             >
           </li>
           <li>
-            <a class="dropdown-item text-dark" style="cursor: pointer"
+            <a
+              class="dropdown-item text-dark"
+              style="cursor: pointer"
+              (click)="fetchData()"
               >Fetch Data</a
             >
           </li>
