--- a/my-recipe-app/src/app/components/auth/auth.component.html
+++ b/my-recipe-app/src/app/components/auth/auth.component.html
@@ -1,6 +1,6 @@
 <div class="row justify-content-center">
   <div class="col-md-3">
-    <form>
+    <form [formGroup]="authForm" (ngSubmit)="submitAuth()">
       <div class="col">
         <label for="emailInput" class="form-label">Email</label>
         <input
@@ -8,7 +8,6 @@
           class="form-control"
           id="emailInput"
           formControlName="email"
-          required
         />
       </div>
       <div class="col">
@@ -18,16 +17,23 @@
           class="form-control"
           id="passwordInput"
           formControlName="password"
-          required
         />
       </div>
       <div class="col text-center">
-        <button class="btn btn-primary m-1 text-light" type="submit">
-          Sign-up
+        <button
+          class="btn btn-primary m-1 text-light"
+          type="submit"
+          [disabled]="authForm.invalid"
+        >
+          {{ isLoginMode ? "Login" : "Sign-up" }}
         </button>
         |
-        <button class="btn btn-primary m-1 text-light" type="submit">
-          Login
+        <button
+          class="btn btn-dark m-1 text-light"
+          (click)="toggleMode()"
+          type="button"
+        >
+          {{ isLoginMode ? "Switch to Sign-up" : "Switch to Login" }}
         </button>
       </div>
     </form>
